--- a/site.css
+++ b/site.css
@@ -10,6 +10,17 @@ body {
   visibility: hidden;
 }
 
+.playlist-item {
+  display: block;
+  font-size: xx-large;
+}
+.playlist-item.adjacent {
+  font-weight: 100;
+}
+.playlist-item.current {
+  font-weight: 500;
+}
+
 /* READY? SET! */
 
 body.playable .game {
